--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
   <dependencies>
 
+    <!--annotations @PreDestroy @PostConstruct-->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
     <dependency>
       <groupId>org.springframework</groupId>
